# DealHunter

./: .claudeignore  .dockerignore  .env.example  .gitignore  ARCHITECTURE_PRINCIPLES.md  LICENSE  Makefile  PROJECT_CONTEXT.md  PROJECT_INDEX.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/: main.py
apps/bot/: main.py
apps/worker/: main.py
docker/: api.Dockerfile  bot.Dockerfile  worker.Dockerfile
migrations/: env.py
migrations/versions/: 354c8b78c4f3_initial_schema.py
src/dealhunter/: __init__.py
src/dealhunter/application/search/: use_cases.py
src/dealhunter/application/users/: use_cases.py
src/dealhunter/core/: config.py  exceptions.py  logging.py
src/dealhunter/domain/listings/: entities.py  repository.py
src/dealhunter/domain/search/: entities.py  repository.py
src/dealhunter/domain/sources/: connector.py
src/dealhunter/domain/users/: entities.py  repository.py
src/dealhunter/infrastructure/cache/: redis_client.py
src/dealhunter/infrastructure/db/: base.py  session.py
src/dealhunter/infrastructure/db/models/: __init__.py  listing.py  search_profile.py  user.py
src/dealhunter/infrastructure/repositories/: listing_repository.py  search_repository.py  user_repository.py
src/dealhunter/infrastructure/sources/avito/: connector.py  fixture_fetcher.py  parser.py
src/dealhunter/presentation/api/: app.py  dependencies.py
src/dealhunter/presentation/api/v1/routers/: health.py  search.py  users.py
src/dealhunter/presentation/api/v1/schemas/: search.py  user.py
src/dealhunter/presentation/bot/: app.py
src/dealhunter/presentation/bot/routers/: start.py
tests/: conftest.py
tests/unit/: test_avito_parser.py  test_health.py  test_register_user_use_case.py  test_users_api.py
