[tool.poetry]
name = "dealhunter-ai"
version = "0.1.0"
description = "DealHunter AI — интеллектуальная платформа анализа вторичного рынка и поиска выгодных предложений"
authors = ["DealHunter AI Team"]
readme = "README.md"
license = "Proprietary"
packages = [{ include = "dealhunter", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"

# --- Web / API ---
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"

# --- Database ---
sqlalchemy = "^2.0.35"
asyncpg = "^0.30.0"
alembic = "^1.13.3"

# --- Cache / Queue ---
redis = "^5.1.0"

# --- Telegram ---
aiogram = "^3.13.0"

# --- Shared utilities ---
python-dotenv = "^1.0.1"
orjson = "^3.10.7"

# --- Source connectors (парсинг HTML) ---
selectolax = "^0.3.21"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.2"
black = "^24.10.0"
ruff = "^0.6.9"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ──────────────────────────────────────────────────────────────
# Black
# ──────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

# ──────────────────────────────────────────────────────────────
# Ruff
# ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "apps", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ASYNC",# flake8-async
    "RUF",  # ruff-specific rules
]
ignore = ["E501", "RUF001", "RUF002", "RUF003", "ASYNC110"]  # длина строки контролируется black'ом

[tool.ruff.lint.isort]
known-first-party = ["dealhunter"]

# ──────────────────────────────────────────────────────────────
# MyPy
# ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiogram.*", "asyncpg.*"]
ignore_missing_imports = true

# ──────────────────────────────────────────────────────────────
# Pytest
# ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=dealhunter --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/dealhunter"]
omit = ["*/tests/*"]
